Fixing issue in latest chrome update with overflow and height of page titles

--- a/src/grhughes.com.Website.Web/css/style.css
+++ b/src/grhughes.com.Website.Web/css/style.css
@@ -215,6 +215,7 @@ h2:first-child
   background-color: #444b5b;
   padding: 5px 10px;
   color: #eee;
+  overflow: auto;
 }
 
 article > h2 > .title, 
@@ -226,6 +227,7 @@ h2 > a
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  float: left;
 }
 
 
